<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">統一發票號碼對獎</string>
    <string name="title_section1">瀏覽號碼</string>
    <string name="title_section2">新增號碼</string>
    <string name="title_section3">發票對獎</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定</string>
    <string name="server_ip">140.112.31.171</string>
    <string name="server_port">5000</string>
    <string name="username">peer4321</string>
    <string name="select_month">選擇月份</string>
    <string name="title_invoice">發票號碼</string>
    <string name="hint_number">請輸入8位數字</string>
    <string name="title_memo">備註欄</string>
    <string name="hint_memo">(選填)</string>
    <string name="text_reset">重設</string>
    <string name="text_submit">送出</string>

</resources>
