<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditFragment"
    >
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <GridLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/glEdit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/select_month"
                android:id="@+id/tvAddMonth"
                android:layout_row="0"
                android:layout_column="0"
                android:padding="10dp"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spEditMonth"
                android:layout_row="0"
                android:layout_column="1"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_invoice"
                android:id="@+id/tvAddNumber"
                android:layout_row="1"
                android:layout_column="0"
                android:padding="10dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etEditNumber"
                android:layout_row="1"
                android:layout_column="1"
                android:padding="10dp"
                android:maxLength="8"
                android:hint="@string/hint_number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_memo"
                android:id="@+id/tvAddMemo"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="10dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etEditMemo"
                android:layout_row="2"
                android:layout_column="1"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:hint="@string/hint_memo"
                />
        </GridLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <!--android:background="@android:drawable/bottom_bar"-->
    
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reset"
                android:id="@+id/btEditReset"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/centerPointAdd"
                android:layout_toStartOf="@+id/centerPointAdd"
                />
    
            <TextView
                android:id="@+id/centerPointAdd"
                android:text=""
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />
    
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_submit"
                android:id="@+id/btEditSubmit"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/centerPointAdd"
                android:layout_toEndOf="@+id/centerPointAdd"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>